{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 931,
  "lineage": "31b516e5-d236-f030-2585-e964a981334a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0438f5b674678726d",
            "association_id": "eipassoc-0bd5e4c3a56411700",
            "domain": "vpc",
            "id": "eipalloc-0438f5b674678726d",
            "network_border_group": "us-west-1",
            "network_interface": "eni-095e0003e87fe34b7",
            "private_dns": "ip-192-168-2-142.us-west-1.compute.internal",
            "private_ip": "192.168.2.142",
            "public_dns": "ec2-13-56-63-178.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.63.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIP"
            },
            "tags_all": {
              "Name": "ElasticIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:423151161036:instance/i-0eac6f8c54b3da3b6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eac6f8c54b3da3b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-008b07e62b6da61d4",
            "private_dns": "ip-192-168-2-105.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.105",
            "public_dns": "ec2-54-219-193-103.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.193.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06922ee4855ae5214",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b09a320432bdeab6",
            "tags": {
              "Name": "web-server-1",
              "Owner": "iam",
              "Progect": "lab-task"
            },
            "tags_all": {
              "Name": "web-server-1",
              "Owner": "iam",
              "Progect": "lab-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094113298b28eda93"
            ]
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_subnet.rds",
            "aws_vpc.custom",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:423151161036:instance/i-0c654cd5069154c4a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c654cd5069154c4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "webserver",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01637984ef79bce1d",
            "private_dns": "ip-192-168-0-168.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.168",
            "public_dns": "ec2-54-219-230-230.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.230.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03fbe0836fdb9521f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0203ea6dea8e72d5d",
            "tags": {
              "Name": "web-server-2",
              "Owner": "iam",
              "Progect": "lab-task"
            },
            "tags_all": {
              "Name": "web-server-2",
              "Owner": "iam",
              "Progect": "lab-task"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094113298b28eda93"
            ]
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_subnet.rds",
            "aws_vpc.custom",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:internet-gateway/igw-0ea6cf067deacdc00",
            "id": "igw-0ea6cf067deacdc00",
            "owner_id": "423151161036",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-0d83c373273c45475"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:423151161036:loadbalancer/app/LoadBalancer/eae7866b5aeee1a3",
            "arn_suffix": "app/LoadBalancer/eae7866b5aeee1a3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "LoadBalancer-1005812911.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:423151161036:loadbalancer/app/LoadBalancer/eae7866b5aeee1a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "LoadBalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0001e8b1ef518b1cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0203ea6dea8e72d5d"
              },
              {
                "subnet_id": "subnet-0b09a320432bdeab6"
              }
            ],
            "subnets": [
              "subnet-0203ea6dea8e72d5d",
              "subnet-0b09a320432bdeab6"
            ],
            "tags": {
              "Environment": "Labs Balancer"
            },
            "tags_all": {
              "Environment": "Labs Balancer"
            },
            "vpc_id": "vpc-0d83c373273c45475",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:423151161036:listener/app/LoadBalancer/eae7866b5aeee1a3/cd0ecf8457309912",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:423151161036:targetgroup/target-labs/c109f4189926cc30",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:423151161036:listener/app/LoadBalancer/eae7866b5aeee1a3/cd0ecf8457309912",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:423151161036:loadbalancer/app/LoadBalancer/eae7866b5aeee1a3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg-labs",
            "aws_security_group.lb_sg",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-labs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:423151161036:targetgroup/target-labs/c109f4189926cc30",
            "arn_suffix": "targetgroup/target-labs/c109f4189926cc30",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:423151161036:targetgroup/target-labs/c109f4189926cc30",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-labs",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d83c373273c45475"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:423151161036:targetgroup/target-labs/c109f4189926cc30-20231119224335221400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:423151161036:targetgroup/target-labs/c109f4189926cc30",
            "target_id": "i-0eac6f8c54b3da3b6"
          },
          "dependencies": [
            "aws_instance.webserver_1",
            "aws_lb_target_group.tg-labs",
            "aws_security_group.lb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_subnet.rds",
            "aws_vpc.custom",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:423151161036:targetgroup/target-labs/c109f4189926cc30-20231119224331878100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:423151161036:targetgroup/target-labs/c109f4189926cc30",
            "target_id": "i-0c654cd5069154c4a"
          },
          "dependencies": [
            "aws_instance.webserver_2",
            "aws_lb_target_group.tg-labs",
            "aws_security_group.lb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_subnet.rds",
            "aws_vpc.custom",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0438f5b674678726d",
            "association_id": "eipassoc-0bd5e4c3a56411700",
            "connectivity_type": "public",
            "id": "nat-0e760c5e7c2278b41",
            "network_interface_id": "eni-095e0003e87fe34b7",
            "private_ip": "192.168.2.142",
            "public_ip": "13.56.63.178",
            "subnet_id": "subnet-0b09a320432bdeab6",
            "tags": {
              "Name": "Nat-Gateway"
            },
            "tags_all": {
              "Name": "Nat-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP",
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_route_table_association.RT-IG-Association",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnet-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:route-table/rtb-064ea95268aa2d721",
            "id": "rtb-064ea95268aa2d721",
            "owner_id": "423151161036",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea6cf067deacdc00",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for Internet Gateway"
            },
            "tags_all": {
              "Name": "Route Table for Internet Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d83c373273c45475"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aedd18b28926295",
            "route_table_id": "rtb-064ea95268aa2d721",
            "subnet_id": "subnet-0b09a320432bdeab6"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcae1c307b1bd65f",
            "route_table_id": "rtb-064ea95268aa2d721",
            "subnet_id": "subnet-0203ea6dea8e72d5d"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnet-RT",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:security-group/sg-0001e8b1ef518b1cd",
            "description": "HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from webserver",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0001e8b1ef518b1cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-group",
            "name_prefix": "",
            "owner_id": "423151161036",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d83c373273c45475"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:security-group/sg-094113298b28eda93",
            "description": "HTTP, HTTPS, SSH, DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from webserver",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094113298b28eda93",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "database connect",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5433
              },
              {
                "cidr_blocks": [
                  "192.168.3.0/24",
                  "192.168.4.0/24",
                  "192.168.2.0/24",
                  "192.168.0.0/24",
                  "192.168.1.0/24"
                ],
                "description": "memcache cluster",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11211
              },
              {
                "cidr_blocks": [
                  "192.168.3.0/24",
                  "192.168.4.0/24",
                  "192.168.2.0/24",
                  "192.168.0.0/24",
                  "192.168.1.0/24"
                ],
                "description": "redis cluster",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "89.77.142.25/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP for web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0001e8b1ef518b1cd"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-security-group",
            "name_prefix": "",
            "owner_id": "423151161036",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d83c373273c45475"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_subnet.rds",
            "aws_vpc.custom",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:subnet/subnet-0fe70144f7d785a52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe70144f7d785a52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423151161036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1c - Private Subnet"
            },
            "tags_all": {
              "Name": "us-west-1c - Private Subnet"
            },
            "vpc_id": "vpc-0d83c373273c45475"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:subnet/subnet-0b09a320432bdeab6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b09a320432bdeab6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423151161036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1a - Public Subnet"
            },
            "tags_all": {
              "Name": "us-west-1a - Public Subnet"
            },
            "vpc_id": "vpc-0d83c373273c45475"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:subnet/subnet-0203ea6dea8e72d5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0203ea6dea8e72d5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423151161036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1c - Public Subnet"
            },
            "tags_all": {
              "Name": "us-west-1c - Public Subnet"
            },
            "vpc_id": "vpc-0d83c373273c45475"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:subnet/subnet-0ab6187914c82d417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab6187914c82d417",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423151161036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1c - RDS Subnet"
            },
            "tags_all": {
              "Name": "us-west-1c - RDS Subnet"
            },
            "vpc_id": "vpc-0d83c373273c45475"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:subnet/subnet-037d07903231e8a66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037d07903231e8a66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423151161036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-west-1a - RDS Subnet"
            },
            "tags_all": {
              "Name": "us-west-1a - RDS Subnet"
            },
            "vpc_id": "vpc-0d83c373273c45475"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:423151161036:vpc/vpc-0d83c373273c45475",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-03b02852b2304a068",
            "default_route_table_id": "rtb-030d85f42e67bdb98",
            "default_security_group_id": "sg-0ba3e875dd66ad496",
            "dhcp_options_id": "dopt-09057a17adf1f4cb0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d83c373273c45475",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030d85f42e67bdb98",
            "owner_id": "423151161036",
            "tags": {
              "Name": "custom"
            },
            "tags_all": {
              "Name": "custom"
            }
          }
        }
      ]
    }
  ]
}